# bilibili-downloader

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  example.py  publish.sh  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
bilibili_downloader/: __init__.py  downloader.py  exceptions.py  models.py  utils.py
docs/: CICD.md
scripts/: release.py
